test/libhyperion/syntaxTests/abiEncoder/v2_call_to_v2_library_function_pointer_accepting_struct.hyp
==== Source: A ====
pragma abicoder               v2;

library L {
    struct Item {
        uint x;
    }

    function get(Item memory _item) external {}
}
==== Source: B ====
pragma abicoder               v2;

import "A";

contract Test {
    function foo() public {
        // NOTE: This test checks a case that is currently not possible (pointer to an external
        // library function) but it might become possible in the future.
        function(L.Item memory) external ptr = L.get;
        ptr(L.Item(5));
    }
}
// ----
// TypeError 4888: (B:269-305): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
